--- a/src/slides.tex
+++ b/src/slides.tex
@@ -91,118 +91,52 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}
-    \frametitle{Urheberrechtsverletzung?}
-    \begin{itemize}
-        \item<2-> Hintergrund-Musik in einem eigenen Video
-        \item<3-> Bild aus Karrikatur/Studie
-        \item<4-> Austeilen einer CD mit Lied
-        \item<5-> Zeigen von Filmen im Unterricht
-        \item<6-> Text aus einem Arbeitsbuch kopieren
-        \item<7-> Verwenden eines Artikels aus dem Internet
-    \end{itemize}
-\end{frame}
-
-\section{Urheberrecht}
+\section{Creative Commons}
 \subsection{}
-
-\begin{frame}
-  \frametitle{Urheberrecht (1)}
-    \begin{itemize}
-        \item<2-> Urheberrecht worauf?
-        \begin{itemize}
-          \item<3-> Sprachwerke [\dots]
-          \item<4-> Werke der Musik
-          \item<5-> pantomimische Werke [\dots]
-          \item<6-> \dots
-          \item<7-> persönliche geistige Schöpfungen
-        \end{itemize}
-      \item<8-> Urheber hat automatisch Urheberrecht
-      \item<9-> Urheberpersönlichkeitsrechte
-      \item<10-> Vervielfältigung, Verbreitung, \dots
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Urheberrecht (2)}
-    \begin{itemize}
-        \item<2-> erlischt 70 Jahre nach dem Tod
-        \item<3-> Schranken
-        \begin{itemize}
-          \item<4-> Privatkopie
-          \item<5-> Zitate
-          \item<6-> Unterricht und Forschung
-        \end{itemize}
-        \item<7-> Verwertungsgesellschaften
-        \item<8-> Lizenzen
-    \end{itemize}
-\end{frame}
-
-\section{Freie Lizenzen}
-\subsection{}
-
-\begin{frame}
-    \frametitle{Die 4 Freiheiten}
-    \begin{itemize}
-        \item<2-> Die Software darf \dots
-            \begin{enumerate}
-            \setcounter{enumi}{-1}
-            %startwert -1, das nächste Item ist also "`0"'
-                \item<3-> zu jedem Zweck ausgeführt werden
-                \item<4-> untersucht und verändert werden
-                \item<5-> verbreitet werden
-                \item<6-> verbessert, und die Verbesserung verbreitet werden
-            \end{enumerate}
-        \item<7-> GPL: Auf Software zugeschnitten
-    \end{itemize}
-\end{frame}
 
 \begin{frame}
     \frametitle{Creative Commons}
     \begin{itemize}
         \item<2-> Organisation hat sich zum Ziel gesetzt, Lizenzen zu erarbeiten
-        \item<3-> treibende Kraft: Lawrence Lessig
-        \item<4-> 2001 in den USA gegründet
-        \item<5-> 2012: 10-jähriges bestehen CC Europe
-        \item<6-> Eine Lizenz, die ...
+        \item<3-> Eine Lizenz, die ...
             \begin{itemize}
-                \item<7-> eindeutig ist
-                \item<8-> leicht verständlich ist
-                \item<9-> Nutzung von Werken regelt
+                \item<5-> das Urheberrecht ergänzt (nicht ersetzt)
+                \item<6-> eindeutig ist
+                \item<7-> leicht verständlich ist
+                \item<8-> Nutzung von Werken regelt
             \end{itemize}
-        \item<10-> Version 4 wird aktuell erarbeitet
-        \item<11-> Besteht aus 4 Modulen: BY, SA, ND, NC
+        \item<9-> Besteht aus 4 Modulen: BY, SA, ND, NC
     \end{itemize}
 \end{frame}
 
-%nachfolgende Logos mit einarbeiten
 \begin{frame}
     \frametitle{Modul 1: BY (By)}
     \begin{itemize}
         \item Namensnennung des Original Urhebers
-        \item impliziert ab CC 3.0
+        \item implizit ab CC 3.0
         \item Urheberverweis kann auf Wunsch zurückgezogen werden
     \end{itemize}
         \Cc{by}
 \end{frame}
 
-%by kurz erklärt
 \begin{frame}
     \frametitle{Modul 2: SA (ShareAlike)}
     \begin{itemize}
-        \item Weitergabe unter gleichen Bedingungen
-        \item sichert, dass die Lizenz erhalten bleibt
+        \item "`Weitergabe unter gleichen Bedingungen"'
+        \item Werk darf frei kopiert und weitergegeben werden
+        \item Werk darf in Gänze oder Auszugsweise bearbeitet und verwendet werden
+        \item Die Lizenz muss unverändert beibehalten werden
     \end{itemize}
     \Cc{sa}
 \end{frame}
 
-%sa kurz erklärt
 \begin{frame}
     \frametitle{Modul 3: ND (NonDerivative)}
     \begin{itemize}
-        \item Keine Bearbeitung
+        \item "`Keine Bearbeitung"'
         \item Werk darf frei kopiert und weitergegeben werden
-        \item Werk darf nicht bearbeitet werden, d. h. Verwendung in einer Collage nicht möglich
+        \item Werk darf nicht bearbeitet werden
+        \item Verwendung in einer Collage nicht möglich
     \end{itemize}
     \Cc{nd}
 \end{frame}
@@ -211,32 +145,36 @@
 \begin{frame}
     \frametitle{Modul 4: NC (NonCommercial)}
     \begin{itemize}
-        \item Nur nicht-kommerzielle Nutzung
-        \item Probleme: Was ist kommerzielle Nutzung?
+        \item "`Nur nicht-kommerzielle Nutzung"'
+        \item Werk darf frei kopiert und weitergegeben werden
+        \item Werk darf nicht in kommerziellen Produkten vorkommen
+        \item Probleme: Was ist kommerziell?
     \end{itemize}
     \Cc{nc}
 \end{frame}
 
-%nc kurz erklärt und von abgeraten!!!!!
-
 \begin{frame}
     \frametitle{Baukastensystem}
     \begin{itemize}
-        \item<2-> durch Kombination sind 6 Lizenzen zusammenstellbar
-            \url{https://creativecommons.org/choose/?lang=de}
-        \item<3-> Lizensierung des eigenen Werkes einfach möglich
-        \item<4-> Es muss vermerkt werden:
+        \item<1-> Nutzungsbedingungen der Inhalte ist Nutzern klar, da diese die Lizenz erkennen
+        \item<2-> Lizensierung des eigenen Werkes einfach möglich
+        \item<3-> durch Kombination sind 6 Lizenzen zusammenstellbar
+        \item<4-> Praxis: \url{https://creativecommons.org/choose/?lang=de}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Lizensierung eigener Werke}
+    \begin{itemize}
+        \item<2-> Es muss vermerkt werden:
             \begin{enumerate}
-                \item<5-> Original Urheber
-                \item<6-> Lizenz
-                \item<7-> Link zur Lizenz
+                \item<3-> Original Urheber
+                \item<4-> Lizenz
+                \item<5-> Link zur Lizenz
             \end{enumerate}
-        \item<8-> nicht exklusiv
-        \item<9-> Nutzungsbedingungen der Inhalte ist Nutzern klar, da diese die Lizenz erkennen
-        \item<10-> kann nicht zurückgezogen werden
-            % hieraus ergeben sich die Fragen: Was passiert, wenn Werk unter mir nicht genehmen Umständen veröffentlicht wird?
-            % kann ich mein Werk anders lizensieren?
-        \item<11-> Maschinenlesbar durch CC REL
+        \item<6-> kann nicht zurückgezogen werden
+        \item<7-> nicht exklusiv
+        \item<8-> Maschinenlesbar durch CC REL
     \end{itemize}
 \end{frame}
 
@@ -247,13 +185,13 @@
             \multicolumn{2}{c|}{}&  \multicolumn{7}{ c }{Lizenzen neues Werk} \\
             \multicolumn{2}{c|}{Orig. Lizenz}& by & by-nc & by-nc-nd & by-nc-sa & by-nd & by-sa & pd \\
             \hline
-            \multirow{7}{*}{} & pd & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} \\
-            & by & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} &  \\
-            & by-nc &  & \cellcolor{green} & \cellcolor{green} & \cellcolor{green} &  &  &  \\
+            \multirow{7}{*}{} & pd & X & X & X & X & X & X & X \\
+            & by & X & X & X & X & X & X &  \\
+            & by-nc &  & X & X & X &  &  &  \\
             & by-nc-nd &  &  &  &  &  &  &  \\
-            & by-nc-sa &  &  &  & \cellcolor{green} &  &  &  \\
+            & by-nc-sa &  &  &  & X &  &  &  \\
             & by-nd &  &  &  &  &  &  &  \\
-            & by-sa &  &  &  &  &  & \cellcolor{green} &  \\
+            & by-sa &  &  &  &  &  & X &  \\
         \end{tabular}
     \end{center}
 \end{frame}
