--- a/src/slides.tex
+++ b/src/slides.tex
@@ -95,6 +95,12 @@
 \subsection{}
 
 \begin{frame}
+    \begin{center}\Large
+    Creative Commons
+    \end {center}
+\end{frame}
+
+\begin{frame}
     \frametitle{Creative Commons}
     \begin{itemize}
         \item<2-> Organisation hat sich zum Ziel gesetzt, Lizenzen zu erarbeiten
@@ -207,9 +213,6 @@
     \end{itemize}
 \end{frame}
 
-\section{Projekte}
-\subsection{}
-
 \begin{frame}
   \frametitle{Open Educational Resources}
     \begin{itemize}
@@ -222,30 +225,26 @@
         \item<6-> Begriff umfasst alle Arten von (Lehr-)Materialien
         \item<7-> Idee: Wissensunterschiede zwischen Industrienationen und Entwicklungsländern abbauen
         \item<8-> 2007: Cape Town Open Education Declaration
+        \item<9-> Beispiel: Polen lässt Unis freie Lehrmaterialien erstellen
     \end{itemize}
 \end{frame}
 
+\section{CC-Inhalte finden}
+\subsection{}
+
 \begin{frame}
-    \frametitle{OER - Beispiel Polen}
-    \begin{itemize}
-        \item<2-> Polnische Regierung lässt von Universitäten freie Lehrmaterialien erstellen
-        \item<3-> Ziele:
-            \begin{itemize}
-                \item<4-> Familien finanziell entlasten
-                \item<5-> Material aktuell halten
-                \item<6-> \ldots
-            \end{itemize}
-        \item<7-> Gegenkampagne der Schulbuchverlage
-    \end{itemize}
+    \begin{center}\Large
+    CC-Inhalte finden
+    \end {center}
 \end{frame}
 
 \begin{frame}
     \frametitle{Open Courseware}
       \begin{itemize}
-        \item<2-> timm: http://timms.uni-tuebingen.de/
-        \item<3-> Berkley: http://webcast.berkeley.edu/
-        \item<4-> MIT: http://ocw.mit.edu
-        \item<5-> Coursera: https://www.coursera.org/ 
+        \item<2-> Berkley: http://webcast.berkeley.edu/
+        \item<3-> MIT: http://ocw.mit.edu
+        \item<4-> (timm: http://timms.uni-tuebingen.de/)
+        \item<5-> (Coursera: https://www.coursera.org/)
     \end{itemize}
 \end{frame}
 
@@ -290,15 +289,19 @@
     \end{itemize}
 \end{frame}
 
+\section{Selbst Lizensieren}
+\subsection{}
+
 \begin{frame}
-    \frametitle{Und weiter?}
-    \begin{itemize}
-      \item<2-> Freie Materialien \dots
-      \item<3-> \dots~in offenen Formaten \dots
-      \item<4-> \dots~erstellt mit freien Werkzeugen \dots
-      \item<5-> \dots~auf freien (Betriebs-)Systemen \dots
-      \item<6-> \dots~und offener Hardware.
-    \end{itemize}
+    \begin{center}\Large
+    Selbst Lizensieren
+    \end {center}
+\end{frame}
+
+\begin{frame}
+    \begin{center}\Large
+    http://creativecommons.org/choose/
+    \end {center}
 \end{frame}
 
 \section{Fazit}
@@ -328,24 +331,6 @@
    Folien vom Chaos Computer Club Dresden\\
    {\cc{by-sa}}
    \end{center}
-\end{frame}
-
-\section{Anhang}
-\subsection{}
-
-\begin{frame}
-  \frametitle{Freie Software}
-  \begin{itemize}
-    \item Linux <- Windows
-    \item Libre Office/Open Office <- Microsoft Office
-    \item Firefox <- Internet Explorer
-    \item Thunderbird <- Outlook
-    \item Gimp <- Photoshop
-    \item Inkscape <- Illustrator
-    \item VLC Media Player <- Windows Mediaplayer
-    \item Pitivi (nur Linux) <- Windows Movie Maker
-    \item Avidemux <- Windows Movie Maker
-  \end{itemize}
 \end{frame}
 
 \end{document}
