Adjust Fazit again

--- a/src/slides.tex
+++ b/src/slides.tex
@@ -312,9 +312,8 @@
     \begin{itemize}
       \item<2-> Lizenzen zum einfachen ``Befreien'' von Inhalten
       \item<3-> Wissen baut auf Wissen auf
-      \item<4-> Kollaboration durch Freiheit ermöglichen
-      \item<5-> (Wissens-)Austausch muss sich auch in Lizenzen wiederspiegeln
-      \item<6-> Prosument
+      \tiem<4-> Viele Angebot Englisch
+      \item<5-> Prosument
     \end{itemize}
 \end{frame}
 
