add some examples

--- a/src/slides.tex
+++ b/src/slides.tex
@@ -213,6 +213,9 @@
     \end{itemize}
 \end{frame}
 
+\section{Inhalte finden}
+\subsection{}
+
 \begin{frame}
   \frametitle{Open Educational Resources}
     \begin{itemize}
@@ -229,13 +232,42 @@
     \end{itemize}
 \end{frame}
 
-\section{Inhalte finden}
-\subsection{}
-
 \begin{frame}
     \begin{center}\Large
     CC-Inhalte finden
     \end {center}
+\end{frame}
+
+\begin{frame}
+    \begin{center}\Large
+      http://search.creativecommons.org/
+    \end {center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Wikimedia Commons}
+  \includegraphics[width=\textwidth]{img/wikicommons.png}
+\end{frame}
+
+\begin{frame}
+    \begin{center}\Large
+      https://archive.org
+    \end {center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Bücher}
+  \includegraphics[width=\textwidth]{img/openlibrary.png}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Bücher}
+  \includegraphics[width=\textwidth]{img/gutenberg.png}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Bücher}
+  \includegraphics[width=\textwidth]{img/feedbooks.png}
 \end{frame}
 
 \begin{frame}
@@ -245,47 +277,6 @@
         \item<3-> MIT: http://ocw.mit.edu
         \item<4-> (timm: http://timms.uni-tuebingen.de/)
         \item<5-> (Coursera: https://www.coursera.org/)
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Weitere Angebote}
-    \begin{itemize}
-        \item<2-> Schulbuch-o-mat: http://www.schulbuch-o-mat.de/
-            \begin{itemize}
-                \item<3-> 10.000 Euro mit Crowdfunding gesammelt
-            \end{itemize}
-        \item<4-> Edutags: http://edutags.de/taxonomy/term/8936
-        \item<5-> Sächsischer Bildungsserver: http://www3.sn.schule.de/
-        \item<6-> \ldots
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Wikimedia}
-    \begin{itemize}
-      \item<2-> Wikipedia
-      \item<3-> Wikimedia Commons
-      \item<4-> Wikibooks
-      \item<5-> Wikiversity
-      \item<6-> Wictionary
-      \item<7-> Wikiquotes
-      \item<8-> ... und 12 weitere
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-    \frametitle{CC Inhalte finden}
-    \begin{itemize}
-        \item<2-> Creative Commons Search: http://search.creativecommons.org/
-        \item<3-> Creative Commons Content Directories: http://wiki.creativecommons.org/Content\_Directories
-        \item<4-> Google Web und Images
-        \item<5-> Flickr: flickr.com
-        \item<6-> 500px: http://500px.com/
-        \item<7-> Jamendo: http://jamendo.com
-        \item<8-> ccMixter: http://ccmixter.org/
-        \item<9-> Bundesarchiv: http://bundesarchiv.de
-        \item<10-> \ldots
     \end{itemize}
 \end{frame}
 
