even more examples

--- a/src/slides.tex
+++ b/src/slides.tex
@@ -256,6 +256,17 @@
 \end{frame}
 
 \begin{frame}
+    \begin{center}\Large
+      http://de.wikisource.org
+    \end {center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Edutags}
+  \includegraphics[width=\textwidth]{img/edutags.png}
+\end{frame}
+
+\begin{frame}
   \frametitle{Bücher}
   \includegraphics[width=\textwidth]{img/openlibrary.png}
 \end{frame}
@@ -278,6 +289,14 @@
         \item<4-> (timm: http://timms.uni-tuebingen.de/)
         \item<5-> (Coursera: https://www.coursera.org/)
     \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Weiteres}
+      \begin{itemize}
+        \item<1-> CC Content Directories: http://wiki.creativecommons.org/Content\_Directories
+        \item<2-> Bundesarchiv: http://bundesarchiv.de
+      \end{itemize}
 \end{frame}
 
 \section{Selbst Lizensieren}
