--- a/src/slides.tex
+++ b/src/slides.tex
@@ -322,7 +322,7 @@
     \begin{itemize}
       \item<2-> Lizenzen zum einfachen ``Befreien'' von Inhalten
       \item<3-> Wissen baut auf Wissen auf
-      \tiem<4-> Viele Angebot Englisch
+      \item<4-> Viele Angebot Englisch
       \item<5-> Prosument
     \end{itemize}
 \end{frame}
