--- a/src/slides.tex
+++ b/src/slides.tex
@@ -24,7 +24,7 @@
 
 
 \title{Freie Lizenzen bei Lehr- und Lernmaterialien}
-\author{Chaos Computer Club Dresden\\Marius Melzer, Paul Schwanse, Stephan Thamm\\13.03.2013}
+\author{Chaos Computer Club Dresden\\Marius Melzer, Stephan Thamm\\13.03.2013}
 \date{Diese Folien gibt es auch öffentlich unter: http://c3d2.de/schule.html}
 
 \begin{document}
@@ -104,12 +104,12 @@
         \item<2-> Organisation hat sich zum Ziel gesetzt, Lizenzen zu erarbeiten
         \item<3-> Eine Lizenz, die ...
             \begin{itemize}
-                \item<5-> das Urheberrecht ergänzt (nicht ersetzt)
-                \item<6-> eindeutig ist
-                \item<7-> leicht verständlich ist
-                \item<8-> Nutzung von Werken regelt
+                \item<4-> das Urheberrecht ergänzt (nicht ersetzt)
+                \item<5-> eindeutig ist
+                \item<6-> leicht verständlich ist
+                \item<7-> Nutzung von Werken regelt
             \end{itemize}
-        \item<9-> Besteht aus 4 Modulen: BY, SA, ND, NC
+        \item<8-> Besteht aus 4 Modulen: BY, SA, ND, NC
     \end{itemize}
 \end{frame}
 
@@ -163,7 +163,6 @@
         \item<1-> Nutzungsbedingungen der Inhalte ist Nutzern klar, da diese die Lizenz erkennen
         \item<2-> Lizensierung des eigenen Werkes einfach möglich
         \item<3-> durch Kombination sind 6 Lizenzen zusammenstellbar
-        \item<4-> Praxis: \url{https://creativecommons.org/choose/?lang=de}
     \end{itemize}
 \end{frame}
 
