move some slides

--- a/src/slides.tex
+++ b/src/slides.tex
@@ -99,6 +99,15 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Urheberrecht}
+    \begin{itemize}
+      \item<2-> Urheberrecht
+      \item<3-> Public Domain
+      \item<4-> Lizenzen
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
     \frametitle{Creative Commons}
     \begin{itemize}
         \item<2-> Organisation hat sich zum Ziel gesetzt, Lizenzen zu erarbeiten
@@ -187,22 +196,6 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Open Educational Resources}
-    \begin{itemize}
-        \item<2-> Materialien sind wie folgt zugänglich:
-            \begin{itemize}
-                \item<3-> ohne Einschränkung
-                \item<4-> in einem freien Format
-                \item<5-> unter einer offenen Lizenzen 
-            \end{itemize}
-        \item<6-> Begriff umfasst alle Arten von (Lehr-)Materialien
-        \item<7-> Idee: Wissensunterschiede zwischen Industrienationen und Entwicklungsländern abbauen
-        \item<8-> 2007: Cape Town Open Education Declaration
-        \item<9-> Beispiel: Polen lässt Unis freie Lehrmaterialien erstellen
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
     \begin{center}\Large
       http://search.creativecommons.org/
     \end {center}
@@ -221,8 +214,13 @@
 
 \begin{frame}
     \begin{center}\Large
-      http://de.wikisource.org
+      https://wikibooks.org
     \end {center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Wikisource}
+  \includegraphics[width=\textwidth]{img/wikisource.png}
 \end{frame}
 
 \begin{frame}
@@ -246,20 +244,41 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Open Educational Resources}
+    \begin{itemize}
+        \item<2-> Materialien sind wie folgt zugänglich:
+            \begin{itemize}
+                \item<3-> ohne Einschränkung
+                \item<4-> in einem freien Format
+                \item<5-> unter einer offenen Lizenzen 
+            \end{itemize}
+        \item<6-> Begriff umfasst alle Arten von (Lehr-)Materialien
+        \item<7-> Idee: Wissensunterschiede zwischen Industrienationen und Entwicklungsländern abbauen
+        \item<8-> 2007: Cape Town Open Education Declaration
+        \item<9-> Beispiel: Polen lässt Unis freie Lehrmaterialien erstellen
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \begin{center}\Large
+    http://timms.uni-tuebingen.de
+    \end {center}
+\end{frame}
+
+\begin{frame}
     \frametitle{Open Courseware}
       \begin{itemize}
         \item<2-> Berkley: http://webcast.berkeley.edu/
         \item<3-> MIT: http://ocw.mit.edu
-        \item<4-> (timm: http://timms.uni-tuebingen.de/)
-        \item<5-> (Coursera: https://www.coursera.org/)
+        \item<4-> (Coursera: https://www.coursera.org/)
     \end{itemize}
 \end{frame}
 
 \begin{frame}
     \frametitle{Weiteres}
       \begin{itemize}
-        \item<1-> CC Content Directories: http://wiki.creativecommons.org/Content\_Directories
-        \item<2-> Bundesarchiv: http://bundesarchiv.de
+        \item<2-> CC Content Directories: http://wiki.creativecommons.org/Content\_Directories
+        \item<3-> Bundesarchiv: http://bundesarchiv.de
       \end{itemize}
 \end{frame}
 
@@ -301,7 +320,7 @@
     \begin{itemize}
       \item<2-> Lizenzen zum einfachen ``Befreien'' von Inhalten
       \item<3-> Wissen baut auf Wissen auf
-      \item<4-> Viele Angebot Englisch
+      \item<4-> Viele Angebote auf Englisch
       \item<5-> Prosument
     \end{itemize}
 \end{frame}
