add links slide

--- a/src/slides.tex
+++ b/src/slides.tex
@@ -339,4 +339,21 @@
    \end{center}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Links}
+  \begin{itemize}
+    \item http://search.creativecommons.org
+    \item http://commons.wikimedia.org
+    \item http://archive.org
+    \item http://wikibooks.org
+    \item http://wikisource.org
+    \item http://edutags.de
+    \item http://openlibrary.org
+    \item http://www.gutenberg.de
+    \item http://feedbooks.com/publicdomain
+    \item http://wiki.creativecommons.org/Content\_Directories
+    \item http://bundesarchiv.de
+  \end{itemize}
+\end{frame}
+
 \end{document}
